--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ a { text-decoration: none; }
 										<header class="major">
 											<h2>About</h2>
 										</header>
-										<p style="font-size:110%">Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a research scientist at the <a href="https://www.a-star.edu.sg/ihpc" style="color:blue">Institute of High Performance Computing (IHPC), A*STAR</a>. Prior to joining IHPC, I obtained my Ph.D. degree in Computer Science from Nanyang Technological University (NTU), supervised by <a href="http://www.cse.cuhk.edu.hk/~sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a> and sponsored by the <a href="https://www.ntu.edu.sg/alibaba-ntu-jri" style="color:blue">Alibaba-NTU Talent Programme</a>. Earlier, I received my B.Eng. (Hons.) degree from National University of Singapore (NUS). <br /> My research focuses on multi-task/multi-distribution learning scenarios, including meta-learning, continual learning, federated learning, and domain generalization. </p>
+										<p style="font-size:110%">Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a research scientist at Institute of High Performance Computing (IHPC), A*STAR, Singapore. Prior to joining IHPC, I obtained my Ph.D. degree in Computer Science from Nanyang Technological University (NTU), supervised by <a href="http://www.cse.cuhk.edu.hk/~sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a> and sponsored by the <a href="https://www.ntu.edu.sg/alibaba-ntu-jri" style="color:blue">Alibaba-NTU Talent Programme</a>. Earlier, I received my B.Eng. (Hons.) degree from National University of Singapore (NUS). <br /> My research focuses on multi-task/multi-distribution learning scenarios, including meta-learning, continual learning, federated learning, and domain generalization. </p>
 
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
@@ -197,21 +197,23 @@ a { text-decoration: none; }
 								<li><a href="https://github.com/danni9594" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="https://linkedin.com/in/danni-peng-001" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://scholar.google.com/citations?hl=en&user=Y7KdCkAAAAAJ" class="icon brands fa-google alt"><span class="label">GoogleScholar</span></a></li>
+								<br /><br />
+								<a href='https://clustrmaps.com/site/1by1z'  title='Visit tracker'><img src='https://clustrmaps.com/map_v2.png?cl=080808&w=800&t=n&d=xUtP3MQS85QwQWJxc-8j836FO3xE23vOPSbEMyYzHgM&co=ffffff&ct=808080' width="300"/></a>
 							</ul>
 						<!-- </section> -->
 						<!-- <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p> -->
 					</footer>
-
 			</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
 
-	</body>
+<!-- Existing Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
+</body>
+
 </html>
