--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ a { text-decoration: none; }
 										<header class="major">
 											<h2>About</h2>
 										</header>
-										<p style="font-size:110%">Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a research scientist at Institute of High Performance Computing (IHPC), A*STAR, Singapore. Prior to joining IHPC, I obtained my Ph.D. degree in Computer Science from Nanyang Technological University (NTU), supervised by <a href="http://www.cse.cuhk.edu.hk/~sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a> and sponsored by the <a href="https://www.ntu.edu.sg/alibaba-ntu-jri" style="color:blue">Alibaba-NTU Talent Programme</a>. Earlier, I received my B.Eng. (Hons.) degree from National University of Singapore (NUS). <br /> My research focuses on multi-task/multi-distribution learning scenarios, including meta-learning, continual learning, federated learning, and domain generalization. </p>
+										<p style="font-size:110%">Hi! My name is Danni Peng (彭丹昵). <br /> I am currently a research scientist at the Institute of High Performance Computing (IHPC), A*STAR, Singapore. Before joining IHPC, I obtained my Ph.D. degree in Computer Science from Nanyang Technological University (NTU), under the supervision of <a href="http://www.cse.cuhk.edu.hk/~sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a> and sponsored by the Alibaba-NTU Talent Programme. Previously, I received my B.Eng. (Hons.) degree from the National University of Singapore (NUS). <br /> My research focuses on multi-task/multi-distribution learning scenarios, including meta-learning, continual learning, federated learning, and domain generalization. </p>
 
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
