--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ a { text-decoration: none; }
 										<header class="major">
 											<h2>About</h2>
 										</header>
-										<p style="font-size:110%">Hi! My name is Danni Peng (彭丹昵). <br /> I am currently a research scientist at the Institute of High Performance Computing (IHPC), A*STAR, Singapore. Before joining IHPC, I obtained my Ph.D. degree in Computer Science from Nanyang Technological University (NTU), under the supervision of <a href="http://www.cse.cuhk.edu.hk/~sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a> and sponsored by the Alibaba-NTU Talent Programme. Previously, I received my B.Eng. (Hons.) degree from National University of Singapore (NUS). <br /> My research focuses on multi-task/multi-distribution learning scenarios, including meta-learning, continual learning, federated learning, and domain generalization. </p>
+										<p style="font-size:110%">Hi! My name is Danni Peng (彭丹昵). <br /> I am currently a research scientist at the Institute of High Performance Computing (IHPC), A*STAR, Singapore. Before joining IHPC, I obtained my Ph.D. degree in Computer Science from Nanyang Technological University (NTU), under the supervision of <a href="http://www.cse.cuhk.edu.hk/~sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a> and sponsored by the Alibaba-NTU Talent Programme. Previously, I received my B.Eng. (Hons.) degree from the National University of Singapore (NUS). <br /> My research focuses on multi-task/multi-distribution learning scenarios, including meta-learning, continual learning, federated learning, and domain generalization. </p>
 
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
@@ -125,9 +125,9 @@ a { text-decoration: none; }
 									<div class="b">
 										<h3 style="font-size:150%"><u>Publications</u> </h3>
 										<p style="font-size:120%"><b>1. Clustered Task-Aware Meta-Learning by Learning from Learning Paths </b><br />
-											[<a href="https://ieeexplore.ieee.org.remotexs.ntu.edu.sg/document/10061493" style="color:green">paper</a>][<a href="https://github.com/danni9594/CTML" style="color:orange">code</a>][<a href="https://dblp.org/rec/journals/pami/PengP23.html?view=bibtex" style="color:purple">bibtex</a>]<br />
+											[<a href="https://danni9594.github.io/publications/TPAMI23_CTML.pdf" style="color:green">paper</a>][<a href="https://github.com/danni9594/CTML" style="color:orange">code</a>][<a href="https://dblp.org/rec/journals/pami/PengP23.html?view=bibtex" style="color:purple">bibtex</a>]<br />
 										Danni Peng, Sinno Jialin Pan<br />
-										IEEE TPAMI 2023
+										IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2023
 										</p>
 										<p style="font-size:120%"><b>2. Learning Gradient-based Mixup towards Flatter Minima for Domain Generalization </b><br />
 										[<a href="https://arxiv.org/abs/2209.14742" style="color:green">paper</a>]<br />
@@ -135,14 +135,14 @@ a { text-decoration: none; }
 										arXiv preprint 2022
 										</p>
 										<p style="font-size:120%"><b>3. Learning an Adaptive Meta Model-Generator for Incrementally Updating Recommender Systems </b><br />
-										[<a href="https://dl.acm.org/doi/10.1145/3460231.3474239" style="color:green">paper</a>][<a href="https://github.com/danni9594/ASMG" style="color:orange">code</a>][<a href="https://dblp.org/rec/conf/recsys/PengPZZ21.html?view=bibtex" style="color:purple">bibtex</a>]<br />
+										[<a href="https://danni9594.github.io/publications/RecSys21_ASMG.pdf" style="color:green">paper</a>][<a href="https://github.com/danni9594/ASMG" style="color:orange">code</a>][<a href="https://dblp.org/rec/conf/recsys/PengPZZ21.html?view=bibtex" style="color:purple">bibtex</a>]<br />
 										Danni Peng, Sinno Jialin Pan, Jie Zhang, Anxiang Zeng<br />
-										RecSys 2021
+										Proceedings of RecSys, 2021
 										</p>
-										<p style="font-size:120%"><b>4. Preventing Overﬁtting via Sample Reweighting for Recommender System Incremental Update </b><br />
-											[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/17928" style="color:green">paper</a>][<a href="https://github.com/danni9594/SRIU" style="color:orange">code</a>][<a href="https://dblp.uni-trier.de/rec/conf/aaai/PengHZZ21.html?view=bibtex" style="color:purple">bibtex</a>]<br />
+										<p style="font-size:120%"><b>4. Preventing Overﬁtting via Sample Reweighting for Recommender System Incremental Update (Student Abstract) </b><br />
+											[<a href="https://danni9594.github.io/publications/AAAI21_SRIU.pdf" style="color:green">paper</a>][<a href="https://github.com/danni9594/SRIU" style="color:orange">code</a>][<a href="https://dblp.uni-trier.de/rec/conf/aaai/PengHZZ21.html?view=bibtex" style="color:purple">bibtex</a>]<br />
 											Danni Peng, Xiaobo Hu, Anxiang Zeng, Jie Zhang<br />
-											AAAI 2021 (Student Abstract)
+											Proceedings of AAAI, 2021
 										</p>
 										<h4 style="font-size:135%">Doctoral Thesis</h4>
 										<p style="font-size:120%"><b>Learning to Generalize to New Tasks/Domains with Limited Data </b>
@@ -151,7 +151,7 @@ a { text-decoration: none; }
 										<h3 style="font-size:150%"><u>Services</u> </h3>
 										<h4 style="font-size:135%">Journal Reviewer</h4>
 										<p style="font-size:120%">
-											<b>IEEE Transactions on Pattern Analysis and Machine Intelligence (IEEE TPAMI)</b><br />
+											<b>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</b><br />
 											<b>Artificial Intelligence (AIJ)</b>
 										</p>
 										<h4 style="font-size:135%">Conference Reviewer</h4>
