--- a/index.html
+++ b/index.html
@@ -124,25 +124,30 @@ a { text-decoration: none; }
 									<!-- <p>My research interests are <b>Continual Learning</b> and <b>Meta Learning</b>.</p> -->
 									<div class="b">
 										<h3 style="font-size:150%"><u>Publications</u> </h3>
-										<p style="font-size:120%"><b>1. Clustered Task-Aware Meta-Learning by Learning from Learning Paths </b><br />
+										<p style="font-size:120%"><b>5. Learning Task-Speciﬁc Initialization for Effective Federated Continual Fine-Tuning of Foundation Model Adapters </b><br />
+											[<a href="https://danni9594.github.io/publications/CAI24_FedCAF.pdf" style="color:green">paper</a>]<br />
+										<u>Danni Peng</u>, Yuan Wang, Huazhu Fu, Qingsong Wei, Yong Liu, Rick Siow Mong Goh<br />
+										To appear in <i>Proceedings of IEEE Conference on Artificial Intelligence</i> (<b>IEEE CAI</b>), 2024
+										</p>
+										<p style="font-size:120%"><b>4. Clustered Task-Aware Meta-Learning by Learning from Learning Paths </b><br />
 											[<a href="https://danni9594.github.io/publications/TPAMI23_CTML.pdf" style="color:green">paper</a>][<a href="https://github.com/danni9594/CTML" style="color:orange">code</a>][<a href="https://dblp.org/rec/journals/pami/PengP23.html?view=bibtex" style="color:purple">bibtex</a>]<br />
-										Danni Peng, Sinno Jialin Pan<br />
-										IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2023
+										<u>Danni Peng</u>, Sinno Jialin Pan<br />
+										In <i>IEEE Transactions on Pattern Analysis and Machine Intelligence</i> (<b>IEEE TPAMI</b>), 2023
 										</p>
-										<p style="font-size:120%"><b>2. Learning Gradient-based Mixup towards Flatter Minima for Domain Generalization </b><br />
-										[<a href="https://arxiv.org/abs/2209.14742" style="color:green">paper</a>]<br />
-										Danni Peng, Sinno Jialin Pan<br />
-										arXiv preprint 2022
+										<p style="font-size:120%"><b>3. Learning Gradient-based Mixup towards Flatter Minima for Domain Generalization </b><br />
+											[<a href="https://arxiv.org/abs/2209.14742" style="color:green">paper</a>]<br />
+											<u>Danni Peng</u>, Sinno Jialin Pan<br />
+											arXiv preprint, 2022
 										</p>
-										<p style="font-size:120%"><b>3. Learning an Adaptive Meta Model-Generator for Incrementally Updating Recommender Systems </b><br />
-										[<a href="https://danni9594.github.io/publications/RecSys21_ASMG.pdf" style="color:green">paper</a>][<a href="https://github.com/danni9594/ASMG" style="color:orange">code</a>][<a href="https://dblp.org/rec/conf/recsys/PengPZZ21.html?view=bibtex" style="color:purple">bibtex</a>]<br />
-										Danni Peng, Sinno Jialin Pan, Jie Zhang, Anxiang Zeng<br />
-										Proceedings of RecSys, 2021
+										<p style="font-size:120%"><b>2. Learning an Adaptive Meta Model-Generator for Incrementally Updating Recommender Systems </b><br />
+											[<a href="https://danni9594.github.io/publications/RecSys21_ASMG.pdf" style="color:green">paper</a>][<a href="https://github.com/danni9594/ASMG" style="color:orange">code</a>][<a href="https://dblp.org/rec/conf/recsys/PengPZZ21.html?view=bibtex" style="color:purple">bibtex</a>]<br />
+											<u>Danni Peng</u>, Sinno Jialin Pan, Jie Zhang, Anxiang Zeng<br />
+											In <i>Proceedings of the 15th ACM Conference on Recommender Systems</i> (<b>RecSys</b>), 2021
 										</p>
-										<p style="font-size:120%"><b>4. Preventing Overﬁtting via Sample Reweighting for Recommender System Incremental Update (Student Abstract) </b><br />
+										<p style="font-size:120%"><b>1. Preventing Overﬁtting via Sample Reweighting for Recommender System Incremental Update (Student Abstract) </b><br />
 											[<a href="https://danni9594.github.io/publications/AAAI21_SRIU.pdf" style="color:green">paper</a>][<a href="https://github.com/danni9594/SRIU" style="color:orange">code</a>][<a href="https://dblp.uni-trier.de/rec/conf/aaai/PengHZZ21.html?view=bibtex" style="color:purple">bibtex</a>]<br />
-											Danni Peng, Xiaobo Hu, Anxiang Zeng, Jie Zhang<br />
-											Proceedings of AAAI, 2021
+											<u>Danni Peng</u>, Xiaobo Hu, Anxiang Zeng, Jie Zhang<br />
+											In <i>Proceedings of the 35th AAAI Conference on Artificial Intelligence</i> (<b>AAAI</b>), 2021
 										</p>
 										<h4 style="font-size:135%">Doctoral Thesis</h4>
 										<p style="font-size:120%"><b>Learning to Generalize to New Tasks/Domains with Limited Data </b>
@@ -151,7 +156,7 @@ a { text-decoration: none; }
 										<h3 style="font-size:150%"><u>Services</u> </h3>
 										<h4 style="font-size:135%">Journal Reviewer</h4>
 										<p style="font-size:120%">
-											<b>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</b><br />
+											<b>IEEE Transactions on Pattern Analysis and Machine Intelligence (IEEE TPAMI)</b><br />
 											<b>Artificial Intelligence (AIJ)</b>
 										</p>
 										<h4 style="font-size:135%">Conference Reviewer</h4>
