--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ a { text-decoration: none; }
 										<h4 style="font-size:135%">Journal Reviewer</h4>
 										<p style="font-size:120%">
 											<b>IEEE Transactions on Pattern Analysis and Machine Intelligence (IEEE TPAMI)</b><br />
+											<b>IEEE Transactions on Neural Networks and Learning Systems (IEEE TNNLS)</b><br />
 											<b>Artificial Intelligence (AIJ)</b>
 										</p>
 										<h4 style="font-size:135%">Conference Reviewer</h4>
