--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@ a { text-decoration: none; }
 										</p>
 										<h4 style="font-size:135%">Conference Reviewer</h4>
 										<p style="font-size:120%">
-											<b>The 40th International Conference on Machine Learning (ICML 2023)</b><br />
-											<b>The 11th International Conference on Learning Representations (ICLR 2023)</b><br />
-											<b>The 36th Annual Conference on Neural Information Processing Systems (NeurIPS 2022)</b><br />
+											<b>The International Conference on Machine Learning (ICML)</b><br />
+											<b>The International Conference on Learning Representations (ICLR)</b><br />
+											<b>The Annual Conference on Neural Information Processing Systems (NeurIPS)</b><br />
 										</p>
 										<h3 style="font-size:150%"><u>Teaching</u> </h3>
 										<p style="font-size:120%"><b>CZ4041/​CE4041: Machine Learning, NTU (AY 2020-21 Sem 2, AY 2021-22 Sem 2)</b><br />
