--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ a { text-decoration: none; }
 										<p style="font-size:120%"><b>5. Learning Task-Speciﬁc Initialization for Effective Federated Continual Fine-Tuning of Foundation Model Adapters </b><br />
 											[<a href="https://danni9594.github.io/publications/CAI24_FedCAF.pdf" style="color:green">paper</a>]<br />
 										<u>Danni Peng</u>, Yuan Wang, Huazhu Fu, Qingsong Wei, Yong Liu, Rick Siow Mong Goh<br />
-										To appear in <i>Proceedings of IEEE Conference on Artificial Intelligence</i> (<b>IEEE CAI</b>), 2024
+										In <i>Proceedings of IEEE Conference on Artificial Intelligence</i> (<b>IEEE CAI</b>), 2024
 										</p>
 										<p style="font-size:120%"><b>4. Clustered Task-Aware Meta-Learning by Learning from Learning Paths </b><br />
 											[<a href="https://danni9594.github.io/publications/TPAMI23_CTML.pdf" style="color:green">paper</a>][<a href="https://github.com/danni9594/CTML" style="color:orange">code</a>][<a href="https://dblp.org/rec/journals/pami/PengP23.html?view=bibtex" style="color:purple">bibtex</a>]<br />
