--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@ a { text-decoration: none; }
 									<!-- <p>My research interests are <b>Continual Learning</b> and <b>Meta Learning</b>.</p> -->
 									<div class="b">
 										<h3 style="font-size:150%"><u>Publications</u> </h3>
+										<p style="font-size:120%"><b>6. Look Back for More: Harnessing Historical Sequential Updates for Personalized Federated Adapter Tuning </b><br />
+											[<a href="https://danni9594.github.io/publications/AAAI25_pFedSeq.pdf" style="color:green">paper</a>]<br />
+										<u>Danni Peng</u>, Yuan Wang, Huazhu Fu, Jinpeng Jiang, Yong Liu, Rick Siow Mong Goh, Qingsong Wei<br />
+										To appear in <i>Proceedings of the 39th AAAI Conference on Artificial Intelligence</i> (<b>AAAI</b>), 2025
+										</p>
 										<p style="font-size:120%"><b>5. Learning Task-Speciﬁc Initialization for Effective Federated Continual Fine-Tuning of Foundation Model Adapters </b><br />
 											[<a href="https://danni9594.github.io/publications/CAI24_FedCAF.pdf" style="color:green">paper</a>]<br />
 										<u>Danni Peng</u>, Yuan Wang, Huazhu Fu, Qingsong Wei, Yong Liu, Rick Siow Mong Goh<br />
