--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ a { text-decoration: none; }
 										<p style="font-size:120%"><b>6. Look Back for More: Harnessing Historical Sequential Updates for Personalized Federated Adapter Tuning </b><br />
 											[<a href="https://danni9594.github.io/publications/AAAI25_pFedSeq.pdf" style="color:green">paper</a>]<br />
 										<u>Danni Peng</u>, Yuan Wang, Huazhu Fu, Jinpeng Jiang, Yong Liu, Rick Siow Mong Goh, Qingsong Wei<br />
-										To appear in <i>Proceedings of the 39th AAAI Conference on Artificial Intelligence</i> (<b>AAAI</b>), 2025
+										To appear in <i>Proceedings of the 39th AAAI Conference on Artificial Intelligence</i> (<b>AAAI</b>), 2025 (oral presentation)
 										</p>
 										<p style="font-size:120%"><b>5. Learning Task-Speciﬁc Initialization for Effective Federated Continual Fine-Tuning of Foundation Model Adapters </b><br />
 											[<a href="https://danni9594.github.io/publications/CAI24_FedCAF.pdf" style="color:green">paper</a>]<br />
