--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@ div.b {
 	text-align: left;
 }
 a { text-decoration: none; }
-
+div.b u {
+  font-size: 90%;
+}
 </style>
 	<head>
 		<title>Danni Peng</title>
@@ -124,10 +126,15 @@ a { text-decoration: none; }
 									<!-- <p>My research interests are <b>Continual Learning</b> and <b>Meta Learning</b>.</p> -->
 									<div class="b">
 										<h3 style="font-size:150%"><u>Publications</u> </h3>
+										<p style="font-size:120%"><b>7. Improving Learning of New Diseases through Knowledge-Enhanced Initialization for Federated Adapter Tuning </b><br />
+										[<a href="https://danni9594.github.io/publications/TMI25_FedKEI.pdf" style="color:green">paper</a>]<br />
+										<u>Danni Peng</u>, Yuan Wang, Kangning Cai, Peiyan Ning, Jiming Xu, Yong Liu, Rick Siow Mong Goh, Qingsong Wei, Huazhu Fu<br />
+										In <i>IEEE Transactions on Medical Imaging</i> (<b>IEEE TMI</b>), 2025
+										</p>
 										<p style="font-size:120%"><b>6. Look Back for More: Harnessing Historical Sequential Updates for Personalized Federated Adapter Tuning </b><br />
-											[<a href="https://danni9594.github.io/publications/AAAI25_pFedSeq.pdf" style="color:green">paper</a>]<br />
+											[<a href="https://danni9594.github.io/publications/AAAI25_pFedSeq.pdf" style="color:green">paper</a>][<a href="https://dblp.org/rec/conf/aaai/Peng0FJ0GW25.html?view=bibtex" style="color:purple">bibtex</a>]<br />
 										<u>Danni Peng</u>, Yuan Wang, Huazhu Fu, Jinpeng Jiang, Yong Liu, Rick Siow Mong Goh, Qingsong Wei<br />
-										To appear in <i>Proceedings of the 39th AAAI Conference on Artificial Intelligence</i> (<b>AAAI</b>), 2025 (oral presentation)
+										In <i>Proceedings of the 39th AAAI Conference on Artificial Intelligence</i> (<b>AAAI</b>), 2025 (oral presentation)
 										</p>
 										<p style="font-size:120%"><b>5. Learning Task-Speciﬁc Initialization for Effective Federated Continual Fine-Tuning of Foundation Model Adapters </b><br />
 											[<a href="https://danni9594.github.io/publications/CAI24_FedCAF.pdf" style="color:green">paper</a>]<br />
@@ -170,6 +177,7 @@ a { text-decoration: none; }
 											<b>The International Conference on Machine Learning (ICML)</b><br />
 											<b>The International Conference on Learning Representations (ICLR)</b><br />
 											<b>The Annual Conference on Neural Information Processing Systems (NeurIPS)</b><br />
+											<b>The International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI)</b><br />
 										</p>
 										<h3 style="font-size:150%"><u>Teaching</u> </h3>
 										<p style="font-size:120%"><b>CZ4041/​CE4041: Machine Learning, NTU (AY 2020-21 Sem 2, AY 2021-22 Sem 2)</b><br />
@@ -199,7 +207,7 @@ a { text-decoration: none; }
 								<!-- <dt>Phone</dt> -->
 								<!-- <dd>(000) 000-0000 x 0000</dd> -->
 								<dt>Email</dt>
-								<dd>dannip@ihpc.a-star.edu.sg</a></dd>
+								<dd>danni9594@gmail.com</a></dd>
 							</dl>
 							<ul class="icons">
 								<!-- <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li> -->
