--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@ a { text-decoration: none; }
 										<header class="major">
 											<h2>About</h2>
 										</header>
-										<p style="font-size:110%">Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a Senior Researcher in Computer Architecture and Simulation at Huawei Singapore Research Centre. Previously, I worked as a scientist at the Institute of High Performance Computing (IHPC), A*STAR, Singapore. Previously, I obtained my Ph.D. degree in Computer Science and Engineering from Nanyang Technological University (NTU), under the supervision of <a href="http://www.cse.cuhk.edu.hk/~sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a> and sponsored by the Alibaba-NTU Talent Programme. <br /> My research interests lie in multi-task and multi-distribution learning scenarios, including meta-learning, continual learning, federated learning, and domain generalization. </p>
+										<p style="font-size:110%">Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a Senior Researcher in computer architecture and simulation at Huawei Singapore Research Centre. Previously, I worked as a research scientist at the Institute of High Performance Computing (IHPC), A*STAR. I obtained my Ph.D. degree in Computer Science and Engineering from Nanyang Technological University (NTU), under the supervision of <a href="http://www.cse.cuhk.edu.hk/~sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a> and sponsored by the Alibaba-NTU Talent Programme. 
+											<!-- <br /> My research interests lie in multi-task and multi-distribution learning scenarios, including meta-learning, continual learning, federated learning, and domain generalization. </p> -->
 
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
