--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@ div.b {
 	text-align: left;
 }
 a { text-decoration: none; }
-
+div.b u {
+  font-size: 90%;
+}
 </style>
 	<head>
 		<title>Danni Peng</title>
@@ -53,8 +55,9 @@ a { text-decoration: none; }
 										<header class="major">
 											<h2>About</h2>
 										</header>
-										<p style="font-size:110%">Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a Senior Researcher in computer architecture and simulation at Huawei Singapore Research Centre. Previously, I worked as a research scientist at the Institute of High Performance Computing (IHPC), A*STAR. I obtained my Ph.D. degree in Computer Science and Engineering from Nanyang Technological University (NTU), under the supervision of <a href="http://www.cse.cuhk.edu.hk/~sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a> and sponsored by the Alibaba-NTU Talent Programme. 
-											<!-- <br /> My research interests lie in multi-task and multi-distribution learning scenarios, including meta-learning, continual learning, federated learning, and domain generalization. </p> -->
+										<p style="font-size:110%">Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a Senior Researcher at Huawei 2012 Laboratories. Previously, I worked as a research scientist at the Institute of High Performance Computing (IHPC), A*STAR. I obtained my Ph.D. degree in Computer Science and Engineering from Nanyang Technological University (NTU), advised by <a href="http://www.cse.cuhk.edu.hk/~sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a> and sponsored by the Alibaba-NTU Talent Programme. 
+<!-- 											Previously, I received my B.Eng. (Hons.) degree from the National University of Singapore (NUS). <br /> My research interests lie in multi-task and multi-distribution learning scenarios, including meta-learning, continual learning, federated learning, and domain generalization.  -->
+										</p>
 
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
@@ -125,10 +128,20 @@ a { text-decoration: none; }
 									<!-- <p>My research interests are <b>Continual Learning</b> and <b>Meta Learning</b>.</p> -->
 									<div class="b">
 										<h3 style="font-size:150%"><u>Publications</u> </h3>
+										<p style="font-size:120%"><b>7. Improving Learning of New Diseases through Knowledge-Enhanced Initialization for Federated Adapter Tuning </b><br />
+										[<a href="https://danni9594.github.io/publications/TMI25_FedKEI.pdf" style="color:green">paper</a>]<br />
+										<u>Danni Peng</u>, Yuan Wang, Kangning Cai, Peiyan Ning, Jiming Xu, Yong Liu, Rick Siow Mong Goh, Qingsong Wei, Huazhu Fu<br />
+										In <i>IEEE Transactions on Medical Imaging</i> (<b>IEEE TMI</b>), 2025
+										</p>
+										<p style="font-size:120%"><b>6. Look Back for More: Harnessing Historical Sequential Updates for Personalized Federated Adapter Tuning </b><br />
+											[<a href="https://danni9594.github.io/publications/AAAI25_pFedSeq.pdf" style="color:green">paper</a>][<a href="https://dblp.org/rec/conf/aaai/Peng0FJ0GW25.html?view=bibtex" style="color:purple">bibtex</a>]<br />
+										<u>Danni Peng</u>, Yuan Wang, Huazhu Fu, Jinpeng Jiang, Yong Liu, Rick Siow Mong Goh, Qingsong Wei<br />
+										In <i>Proceedings of the 39th AAAI Conference on Artificial Intelligence</i> (<b>AAAI</b>), 2025 (oral presentation)
+										</p>
 										<p style="font-size:120%"><b>5. Learning Task-Speciﬁc Initialization for Effective Federated Continual Fine-Tuning of Foundation Model Adapters </b><br />
 											[<a href="https://danni9594.github.io/publications/CAI24_FedCAF.pdf" style="color:green">paper</a>]<br />
 										<u>Danni Peng</u>, Yuan Wang, Huazhu Fu, Qingsong Wei, Yong Liu, Rick Siow Mong Goh<br />
-										To appear in <i>Proceedings of IEEE Conference on Artificial Intelligence</i> (<b>IEEE CAI</b>), 2024
+										In <i>Proceedings of the 2nd IEEE Conference on Artificial Intelligence</i> (<b>IEEE CAI</b>), 2024
 										</p>
 										<p style="font-size:120%"><b>4. Clustered Task-Aware Meta-Learning by Learning from Learning Paths </b><br />
 											[<a href="https://danni9594.github.io/publications/TPAMI23_CTML.pdf" style="color:green">paper</a>][<a href="https://github.com/danni9594/CTML" style="color:orange">code</a>][<a href="https://dblp.org/rec/journals/pami/PengP23.html?view=bibtex" style="color:purple">bibtex</a>]<br />
@@ -158,13 +171,15 @@ a { text-decoration: none; }
 										<h4 style="font-size:135%">Journal Reviewer</h4>
 										<p style="font-size:120%">
 											<b>IEEE Transactions on Pattern Analysis and Machine Intelligence (IEEE TPAMI)</b><br />
+											<b>IEEE Transactions on Neural Networks and Learning Systems (IEEE TNNLS)</b><br />
 											<b>Artificial Intelligence (AIJ)</b>
 										</p>
 										<h4 style="font-size:135%">Conference Reviewer</h4>
 										<p style="font-size:120%">
-											<b>The 40th International Conference on Machine Learning (ICML 2023)</b><br />
-											<b>The 11th International Conference on Learning Representations (ICLR 2023)</b><br />
-											<b>The 36th Annual Conference on Neural Information Processing Systems (NeurIPS 2022)</b><br />
+											<b>The International Conference on Machine Learning (ICML)</b><br />
+											<b>The International Conference on Learning Representations (ICLR)</b><br />
+											<b>The Annual Conference on Neural Information Processing Systems (NeurIPS)</b><br />
+											<b>The International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI)</b><br />
 										</p>
 										<h3 style="font-size:150%"><u>Teaching</u> </h3>
 										<p style="font-size:120%"><b>CZ4041/​CE4041: Machine Learning, NTU (AY 2020-21 Sem 2, AY 2021-22 Sem 2)</b><br />
@@ -194,7 +209,7 @@ a { text-decoration: none; }
 								<!-- <dt>Phone</dt> -->
 								<!-- <dd>(000) 000-0000 x 0000</dd> -->
 								<dt>Email</dt>
-								<dd>dannip@ihpc.a-star.edu.sg</a></dd>
+								<dd>danni9594@gmail.com</a></dd>
 							</dl>
 							<ul class="icons">
 								<!-- <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li> -->
