--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ div.b u {
 										<header class="major">
 											<h2>About</h2>
 										</header>
-										<p style="font-size:110%">Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a Senior Researcher at Huawei 2012 Laboratories. Previously, I worked as a research scientist at the Institute of High Performance Computing (IHPC), A*STAR. I obtained my Ph.D. degree in Computer Science and Engineering from Nanyang Technological University (NTU), advised by <a href="http://www.cse.cuhk.edu.hk/~sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a> and sponsored by the Alibaba-NTU Talent Programme. 
+										<p style="font-size:110%">Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a Senior Researcher at Huawei Singapore Research Centre. Previously, I worked as a research scientist at the Institute of High Performance Computing (IHPC), A*STAR. I obtained my Ph.D. degree in Computer Science and Engineering from Nanyang Technological University (NTU), advised by <a href="http://www.cse.cuhk.edu.hk/~sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a> and sponsored by the Alibaba-NTU Talent Programme. 
 <!-- 											Previously, I received my B.Eng. (Hons.) degree from the National University of Singapore (NUS). <br /> My research interests lie in multi-task and multi-distribution learning scenarios, including meta-learning, continual learning, federated learning, and domain generalization.  -->
 										</p>
 
