--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ div.b u {
 									<div class="b">
 										<h3 style="font-size:150%"><u>Publications</u> </h3>
 										<p style="font-size:120%"><b>7. Improving Learning of New Diseases through Knowledge-Enhanced Initialization for Federated Adapter Tuning </b><br />
-										[<a href="https://danni9594.github.io/publications/TMI25_FedKEI.pdf" style="color:green">paper</a>]<br />
+										[<a href="https://danni9594.github.io/publications/TMI25_FedKEI.pdf" style="color:green">paper</a>][<a href="https://dblp.org/rec/journals/corr/abs-2508-10299.html?view=bibtex" style="color:purple">bibtex</a>]<br />
 										<u>Danni Peng</u>, Yuan Wang, Kangning Cai, Peiyan Ning, Jiming Xu, Yong Liu, Rick Siow Mong Goh, Qingsong Wei, Huazhu Fu<br />
 										In <i>IEEE Transactions on Medical Imaging</i> (<b>IEEE TMI</b>), 2025
 										</p>
