--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ div.b u {
 								<!-- <dt>Phone</dt> -->
 								<!-- <dd>(000) 000-0000 x 0000</dd> -->
 								<dt>Email</dt>
-								<dd>danni9594@gmail.com</a></dd>
+								<dd>danni001@e.ntu.edu.sg</a></dd>
 							</dl>
 							<ul class="icons">
 								<!-- <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li> -->
@@ -238,3 +238,4 @@ div.b u {
 </body>
 
 </html>
+
